--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 slightly believable
                 </p>
             </div>
-            <button class="home_btn" type="button">Read More</button><br>
+            <a href="mailto:raphaelfabunmi@gmail.com"><button class="home_btn" type="button">Read More</button></a><br>
             <div class="box_lines_flex">
                 <div class="box"></div><br>
                 <div class="line_1"></div><br>
@@ -112,7 +112,7 @@
                     <div class="offer_line_1"></div>
                     <div class="offer_line_2"></div>
                 </div>
-                <button class="offer_btn" type="button">Read More</button>
+                <a href="mailto:raphaelfabunmi@gmail.com"><button class="offer_btn" type="button">Read More</button></a>
             </div>
         </div>
     </section>
@@ -127,7 +127,7 @@
                    has roots in a piece of classical latin literature from 45 BC, making it over 2000
                    years old.<br>Richard McClintock,a Latin professor at Hampdon
                 </p>
-                <button class="home_btn" type="button">View All Courses</button><br><br>
+                <a href="mailto:raphaelfabunmi@gmail.com"><button class="home_btn" type="button">View All Courses</button></a><br><br>
                 <div class="courses_line">
                     <div class="courses_square"></div><br>
                     <div class="courses_line_1"></div><br>
@@ -156,7 +156,7 @@
                     making it over 2000 years old. Richard McClintack,
                     a Latin professor at Hampden-Sydney college in Virginia
                 </p>
-                <button class="home_btn" type="button">Start My Free Month</button><br>
+                <a href="mailto:raphaelfabunmi@gmail.com"><button class="home_btn" type="button">Start My Free Month</button></a><br>
                 <div class="free_trial_lines">
                     <div class="free_trial_square"></div><br>
                     <div class="free_trial_line_1"></div><br>
@@ -178,8 +178,8 @@
                     <input type="password" placeholder="Enter Password"><br>
                 </div>
                 <span class="sign_up_btn_container">
-                    <button class="sign_up_btn">Sign Up</button>
-                    <button class="sign_up_btn">Start Free Trial</button>
+                    <a href="mailto:raphaelfabunmi@gmail.com"><button class="sign_up_btn">Sign Up</button></a>
+                    <a href="mailto:raphaelfabunmi@gmail.com"></a><button class="sign_up_btn">Start Free Trial</button></span></a>
                 </span>
             </div>
         
@@ -226,13 +226,15 @@
                 </div>
             </div>
         </footer>
-        <div class="contacts">
-            <img src="images/facebook.png" alt="facebook">
-            <img src="images/instagram.png" alt="instagram">
-            <img src="images/twitter.png" alt="twitter">
-            <img src="images/linkedin.png" alt="linkedin">
+        <div class="social_media_icons">
+            <a href="mailto:raphaelfabunmi@gmail.com"><img src="images/facebook.png" alt="facebook"></a><br>
+            <a href="mailto:raphaelfabunmi@gmail.com"><img src="images/instagram.png" alt="facebook"></a><br>
+            <a href="mailto:raphaelfabunmi@gmail.com"><img src="images/twitter.png" alt="facebook"></a><br>
+            <a href="mailto:raphaelfabunmi@gmail.com"><img src="images/linkedin.png" alt="facebook"></a>
         </div>
     </section>
+
+    
 
     <script>
         var menu = document.getElementById("menu")
