--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 slightly believable
                 </p>
             </div>
-            <a href="mailto:raphaelfabunmi@gmail.com"><button class="home_btn" type="button">Read More</button></a><br>
+            <button class="home_btn" type="button">Read More</button><br>
             <div class="box_lines_flex">
                 <div class="box"></div><br>
                 <div class="line_1"></div><br>
@@ -112,7 +112,7 @@
                     <div class="offer_line_1"></div>
                     <div class="offer_line_2"></div>
                 </div>
-                <a href="mailto:raphaelfabunmi@gmail.com"><button class="offer_btn" type="button">Read More</button></a>
+                <button class="offer_btn" type="button">Read More</button>
             </div>
         </div>
     </section>
@@ -127,7 +127,7 @@
                    has roots in a piece of classical latin literature from 45 BC, making it over 2000
                    years old.<br>Richard McClintock,a Latin professor at Hampdon
                 </p>
-                <a href="mailto:raphaelfabunmi@gmail.com"><button class="home_btn" type="button">View All Courses</button></a><br><br>
+                <button class="home_btn" type="button">View All Courses</button><br><br>
                 <div class="courses_line">
                     <div class="courses_square"></div><br>
                     <div class="courses_line_1"></div><br>
