--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
             <div class="sign_up_left">
                 <h1>Sign Up to join our<br>learning community</h1>
                 <div class="sign_up_input">
-                    <input type="text" placeholder="Enter Name"><br>
-                    <input type="email" placeholder="Enter Email"><br>
-                    <input type="password" placeholder="Enter Password"><br>
+                    <input type="text" placeholder="Enter Name" required><br>
+                    <input type="email" placeholder="Enter Email" required><br>
+                    <input type="password" placeholder="Enter Password" required><br>
                 </div>
                 <span class="sign_up_btn_container">
                     <a href="mailto:raphaelfabunmi@gmail.com"><button class="sign_up_btn">Sign Up</button></a>
